appId: so.tracking.app
---
- launchApp:
    stopApp: false
- extendedWaitUntil:
    visible: Friends & circles
    timeout: 120000
- tapOn: Expand Running 5 kilometers
- assertVisible: Morning run
- takeScreenshot: offline-online-cached-home
- waitForAnimationToEnd:
    timeout: 3000
- tapOn: Add
- assertVisible: Log Running
- takeScreenshot: offline-online-cached-activities
- waitForAnimationToEnd:
    timeout: 3000
- tapOn: Home
