appId: so.tracking.app
---
- launchApp:
    stopApp: false
- extendedWaitUntil:
    visible: Home
    timeout: 120000
- runScript: plan-links.js
- tapOn: Profile
- scrollUntilVisible:
    element: Settings
    direction: UP
- tapOn: Settings
- scrollUntilVisible:
    element: Dark
    direction: DOWN
- tapOn: Dark
- scrollUntilVisible:
    element: Back
    direction: UP
- tapOn: Back
- tapOn:
    text: Plans
    index: 1
- waitForAnimationToEnd
- takeScreenshot: plan-links-dark
- tapOn: train 4 times a week
- waitForAnimationToEnd
- takeScreenshot: plan-preview-dark
- tapOn: View full plan
- waitForAnimationToEnd
- assertVisible: Exercise regularly
- assertVisible: Manage Plan
- tapOn: Back
- waitForAnimationToEnd
- tapOn: your runs
- assertVisible: kilometers
- tapOn: Close Activity
- waitForAnimationToEnd
- tapOn: Profile
- scrollUntilVisible:
    element: Settings
    direction: UP
- tapOn: Settings
- scrollUntilVisible:
    element: Light
    direction: DOWN
- tapOn: Light
- scrollUntilVisible:
    element: Back
    direction: UP
- tapOn: Back
- tapOn:
    text: Plans
    index: 1
- waitForAnimationToEnd
- takeScreenshot: plan-links-light
- tapOn: your reading plan
- waitForAnimationToEnd
- takeScreenshot: plan-preview-light
- tapOn: View full plan
- waitForAnimationToEnd
- assertVisible: Read every day
- assertVisible: Manage Plan
